# scanner

./: .gitignore  CMakeLists.txt  main.cpp
lib/lib/: MVIDCodeReader.lib
